--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,52 @@
-HELP.md
+### Maven / Build ###
 target/
-.mvn/wrapper/maven-wrapper.jar
+build/
 !**/src/main/**/target/
 !**/src/test/**/target/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-### STS ###
+### Spring Boot ###
+HELP.md
+.mvn/wrapper/maven-wrapper.jar
+
+### IDEs ###
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Eclipse / STS
 .apt_generated
 .classpath
 .factorypath
 .project
-.settings
+.settings/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
+# NetBeans
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### VS Code ###
+# VS Code
 .vscode/
+
+### Logs & Runtime ###
+*.log
+*.tmp
+*.out
+*.pid
+
+### OS Files ###
+.DS_Store
+Thumbs.db
+
+### Environment & Security ###
+.env
+#application-*.yml
+#application-*.properties
