--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
+# ===============================
 # Database Connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=changemeinprod!
-# JPA Configuration
+# ===============================
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_USERNAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+# ===============================
+# JPA / Hibernate Configuration
+# ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ===============================
+# JWT Configuration
+# ===============================
+jwt.secret=${JWT_SECRET}
+jwt.expiry-ms=${JWT_EXPIRY_MS}
